...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-8c-JJO" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="TdL-nv-CnJ"/>
                                                        <constraint firstAttribute="width" constant="44" id="ldh-lZ-Nav"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="KFW-Y8-gau" id="yAx-fo-gz4"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hQ-OU-PIY">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="5iE-9Q-H5a"/>
                                    <constraint firstAttribute="height" constant="48" id="dCT-2D-stR"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c5m-0k-cBI">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="HWU-pS-Opu"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
